--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,6 +11,7 @@
 		<script src="../js/board.js"></script>
 		<script src="../js/list.js"></script>
 		<script src="../js/name_input.js"></script>
+		<script src="../js/multi_component.js"></script>
 		<script src="../js/game_view.js"></script>
 	</body>
 </html>
