--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,9 +1,15 @@
 <html>
 	<head>
+		<title>Game of Amazons</title>
 		<link rel="stylesheet" href="../css/styles.css"></link>
 	</head>
 	<body>
 		<div id="main-container"></div>
+		<div class="links">
+			<a href="rules">game rules</a>
+			<span> | </span>
+			<a href="https://github.com/Daniel-Rybe/game-of-amazons">github</a>
+		</div>
 
 		<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
 		<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
