--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,8 +11,8 @@
 			<a href="https://github.com/Daniel-Rybe/game-of-amazons">github</a>
 		</div>
 
-		<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-		<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+		<script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
+		<script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
 
 		<script src="../js/board.js"></script>
 		<script src="../js/list.js"></script>
